# ChangeLog for app-portage/kuroo
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/app-portage/kuroo/Attic/ChangeLog,v 1.31 2009/02/21 04:22:56 darkside dead $

  22 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> kuroo-0.80.2-r1.ebuild,
  kuroo-0.81_rc1.ebuild:
  Instruct users to add FEATURES=\"metadata-transfer\", since
  >=sys-apps/portage-2.1.5 doesnt have this on by default anymore and Kuroo
  doesnt function properly without it. Thanks to Billy DeVincentis in bug
  220175.

  26 Apr 2008; nixnut <nixnut@gentoo.org> kuroo-0.81_rc1.ebuild:
  Stable on ppc wrt bug 218768

  26 Apr 2008; Dawid Węgliński <cla@gentoo.org> kuroo-0.81_rc1.ebuild:
  Stable on x86 (bug #218768)

  21 Apr 2008; Ferris McCormick <fmccor@gentoo.org> kuroo-0.81_rc1.ebuild:
  Sparc stable --- Bug #218768 --- appears to work fine.

  21 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kuroo-0.81_rc1-gcc43.patch, kuroo-0.81_rc1.ebuild:
  Added a patch for gcc 4.3 compatibility as kindly provided by Nikos
  Chantziaras on bug 217877. Marked stable on amd64.

  19 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kuroo-0.80.2-r1.ebuild,
  kuroo-0.81_rc1.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206528.

  19 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kuroo-0.80.31.ebuild:
  Old.

*kuroo-0.81_rc1 (31 Aug 2007)

  31 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> -kuroo-0.80.3.ebuild,
  +kuroo-0.81_rc1.ebuild:
  Removed the obsolete 0.80.3.
  Added 0.81_rc1 as per bug 190837. It has several bugfixes and some minor new
  features.
  Thanks to David Carlos Manuelda (new upstream developer) for providing the
  ebuild!

*kuroo-0.80.31 (20 Aug 2007)

  20 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kuroo-desktop-file.patch, kuroo-0.80.2-r1.ebuild,
  kuroo-0.80.3.ebuild, +kuroo-0.80.31.ebuild: