@@ -1,7 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header:
-# /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/app-portage/kuroo/kuroo-0.82.0.ebuild,v 1.1 2009/06/26 20:43:16 cryos Exp $
+# $Header: $
+
+EAPI="2"
+
+ARTS_REQUIRED="never"
+
+LANGS="de es fr it nb pl ru"
 
 inherit kde eutils
 
@@ -10,7 +15,7 @@ HOMEPAGE="http://sourceforge.net/projects/kuroo"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 LICENSE="GPL-2"
 
-SLOT="0"
+SLOT="3.5"
 KEYWORDS="~x86 ~ppc ~sparc ~amd64"
 IUSE=""
 
