@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/kuroo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/app-portage/kuroo/Attic/ChangeLog,v 1.31 2009/02/21 04:22:56 darkside dead $
+
+  08 Jul 2009; <aschenck@gentoo.org> kuroo-0.82.0.ebuild:
+  New version that works with current stable and unstable Portages. 
+  Updated ebuild to use EAPI 2 and fix bug #236772.
 
   22 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> kuroo-0.80.2-r1.ebuild,
   kuroo-0.81_rc1.ebuild:
